# pot-matching-engine

./: .gitignore  app.py  pyproject.toml  requirements.txt
data/: sample_profiles.json  sample_profiles_minimal.json
src/matching/: config.py  domain_model.py  embeddings.py  engine.py  llm.py  models.py
src/matching/explanation/: generator.py
src/matching/extraction/: intent_extractor.py
src/matching/scoring/: complementarity.py  composite.py  non_obvious.py  non_obvious_tfidf.py  transaction_readiness.py
tests/: test_domain_model.py  test_engine_integration.py  test_scoring.py
