[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pot-matching-engine"
version = "0.1.0"
description = "Proof of Talk AI Matchmaking Engine — prototype"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0,<3",
    "anthropic>=0.39",
    "numpy>=1.24,<2.1",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "streamlit>=1.30",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "eval_type_backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
